--- a/index.html
+++ b/index.html
@@ -10,12 +10,13 @@
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;500;700&display=swap" rel="stylesheet"/>
     <!-- Google Fonts -->
     <link rel="stylesheet" href="style.css" />
+    <link rel="icon" href="img/favicon.png">
     <title>CURRICULUM VITAE</title>
   </head>
   <body>
     <div class="contenido">
       <div class="cabecera">
-        <img class="foto" src="Emmanuel.jpeg" alt="" />
+        <img class="foto" src="img/Emmanuel.jpeg" alt="" />
 
         <div class="aboutme">
           <h1>Emmanuel Fernández</h1>
