--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- Google Fonts -->
     <link rel="stylesheet" href="style.css" />
     <link rel="icon" href="img/favicon.png">
-    <title>CURRICULUM VITAE</title>
+    <title>Curriculum Vitae</title>
   </head>
   <body>
     <div class="contenido">
